2003-10-05  Gerhard Jaeger <gerhard@gjaeger.de>

	* aclocal.m4 configure configure.in: added checks for pthread.h and
	  added linker option -lpthread if pthread.h is found
	* include/sane/config.in.h: added HAVE_PTHREAD_H
	* sanei/sanei_thread.c include/sane/sanei_thread.h: added pthread_
	  functions to library, so every backend is able to use either fork or
      pthread for its reader-process - see plustek backend for example
	* backend/plustek.h backend/plustek.c: added sanei_thread stuff to support
	  threading on MacOS X
	* backend/plustek_pp*: some cleanup

2003-10-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/microtek2.h backend/test.c include/sane/saneopts.h:
	  Fixed some missing or duplicated spaces in option descriptions.
	* backend/canon630u.c: Option names shouldn't be translated.
	* backend/mustek.c: Use the same title for brightness as in other
	  backends.
	* po/sane-backends.de.po: Fixed minor bugs.
	* po/sane-backends.sv.po: Updated (from Mattias Ellert
	  <mattias.ellert@tsl.uu.se>).
	* po/sane-backends.bg.po po/sane-backends.cs.po
	  po/sane-backends.es.po po/sane-backends.fr.po
	  po/sane-backends.it.po po/sane-backends.nl.po
	  po/sane-backends.no.po po/sane-backends.pt.po
	  po/sane-backends.ru.po: Regenerated.
	* doc/descriptions/unsupported.desc: Added Epson Perfection 3170,
	  Packard Bell Diamond 1200, and Visioneer PaperPort
	  3100b. Updated Epson Perfection 1670.

2003-10-04  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.[ch]: Fixed bug 300246 - Use SANE_TITLE_SCAN_SPEED
	  (and DESC and NAME) from saneopts.h instead of my own strings.
	  Fixed typo in gamma correction description.
	  Start two descriptions with a capital character.

2003-10-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS configure configure.in backend/Makefile.in backend/dll.conf
	  backend/mustek_pp_ccd.c backend/mustek_pp_ccd.conf backend/mustek_pp_ccd.h
	  doc/Makefile.in doc/sane.man doc/sane-mustek_pp_ccd.man