@@ -54,12 +54,12 @@
 #include "hp5400.h"
 #include "hp5400_debug.h"
 
-#include "sane/config.h"
-#include "sane/sane.h"
-#include "sane/sanei.h"
-#include "sane/sanei_backend.h"
-#include "sane/sanei_config.h"
-#include "sane/saneopts.h"
+#include "../include/sane/config.h"
+#include "../include/sane/sane.h"
+#include "../include/sane/sanei.h"
+#include "../include/sane/sanei_backend.h"
+#include "../include/sane/sanei_config.h"
+#include "../include/sane/saneopts.h"
 
 
 #include <stdlib.h>		/* malloc, free */
@@ -69,7 +69,7 @@
 
 #define HP5400_CONFIG_FILE "hp5400.conf"
 
-#define BUILD   2
+#define BUILD   3
 
 /* (source) includes for data transfer methods */
 #include "hp5400_debug.c"
