@@ -54,13 +54,13 @@
 /* definitions for debug */
 #include "hp5400_debug.h"
 
-#include "sane/sane.h"
-#include "sane/sanei.h"
-#include "sane/sanei_backend.h"
-#include "sane/sanei_config.h"
-#include "sane/saneopts.h"
-#include "sane/config.h"
-#include "sane/sanei_usb.h"
+#include "../include/sane/sane.h"
+#include "../include/sane/sanei.h"
+#include "../include/sane/sanei_backend.h"
+#include "../include/sane/sanei_config.h"
+#include "../include/sane/saneopts.h"
+#include "../include/sane/config.h"
+#include "../include/sane/sanei_usb.h"
 
 #include <stdlib.h>         /* malloc, free */
 #include <string.h>         /* memcpy */
