@@ -56,7 +56,7 @@
 #include "hp5400_xfer.h"
 #include "hp5400_debug.h"
 #include <stdio.h>
-#include "sane/sanei_usb.h"
+#include "../include/sane/sanei_usb.h"
 
 #define CMD_INITBULK1   0x0087	/* send 0x14 */
 #define CMD_INITBULK2   0x0083	/* send 0x24 */
@@ -94,6 +94,7 @@ _UsbWriteControl (int fd, int iValue, int iIndex, void *pabData, int iSize)
 
 }
 
+HP5400_SANE_STATIC
 void
 hp5400_command_write_noverify (int fd, int iValue, void *pabData, int iSize)
 {
@@ -117,6 +118,7 @@ _UsbReadControl (int fd, int iValue, int iIndex, void *pabData, int iSize)
 }
 
 
+HP5400_SANE_STATIC
 int
 hp5400_open (const char *filename)
 {
@@ -157,6 +159,7 @@ hp5400_open (const char *filename)
 }
 
 
+HP5400_SANE_STATIC
 void
 hp5400_close (int iHandle)
 {
@@ -165,6 +168,7 @@ hp5400_close (int iHandle)
 
 
 /* returns value > 0 if verify ok */
+HP5400_SANE_STATIC
 int
 hp5400_command_verify (int iHandle, int iCmd)
 {
@@ -206,6 +210,7 @@ hp5400_command_verify (int iHandle, int iCmd)
 
 
 /* returns > 0 if command OK */
+HP5400_SANE_STATIC
 int
 hp5400_command_read_noverify (int iHandle, int iCmd, int iLen, void *pbData)
 {
@@ -224,6 +229,7 @@ hp5400_command_read_noverify (int iHandle, int iCmd, int iLen, void *pbData)
 }
 
 /* returns > 0 if command OK */
+HP5400_SANE_STATIC
 int
 hp5400_command_read (int iHandle, int iCmd, int iLen, void *pbData)
 {
@@ -234,6 +240,7 @@ hp5400_command_read (int iHandle, int iCmd, int iLen, void *pbData)
 
 
 /* returns >0 if command OK */
+HP5400_SANE_STATIC
 int
 hp5400_command_write (int iHandle, int iCmd, int iLen, void *pbData)
 {
@@ -252,6 +259,7 @@ hp5400_command_write (int iHandle, int iCmd, int iLen, void *pbData)
 }
 
 /* returns >0 if command OK */
+HP5400_SANE_STATIC
 int
 hp5400_bulk_read (int iHandle, size_t len, int block, FILE * file)
 {
@@ -293,6 +301,7 @@ hp5400_bulk_read (int iHandle, size_t len, int block, FILE * file)
 }
 
 /* returns >0 if command OK */
+HP5400_SANE_STATIC
 int
 hp5400_bulk_read_block (int iHandle, int iCmd, void *cmd, int cmdlen,
 			void *buffer, int len)
@@ -315,6 +324,7 @@ hp5400_bulk_read_block (int iHandle, int iCmd, void *cmd, int cmdlen,
 }
 
 /* returns >0 if command OK */
+HP5400_SANE_STATIC
 int
 hp5400_bulk_command_write (int iHandle, int iCmd, void *cmd, int cmdlen,
 			   int datalen, int block, char *data)
@@ -360,6 +370,7 @@ hp5400_bulk_command_write (int iHandle, int iCmd, void *cmd, int cmdlen,
     retrieve on/off status from scanner
     @return 1 if is on 0 if is off -1 if is not reachable
 */
+HP5400_SANE_STATIC
 int
 hp5400_isOn (int iHandle)
 {
